feat: ajuste header

--- a/src/web/components/header.html
+++ b/src/web/components/header.html
@@ -2,14 +2,14 @@
     <button onClick = "operation()"> Operação </button>
     <button onClick = "configuration()"> Configurações </button>
     <img src="images/logo.svg" alt="logo betbot" onClick = "welcome()">
-    <a href="https://t.me/JDaniloC" class = "logout"> 
+    <a href="" class = "logout"> 
         Comprar licença 
     </a>
     <button class = "logout" onClick="open_login()"> 
         Login 
     </button>
     
-    <a href="https://t.me/JDaniloC" class="login">
+    <a href="" class="login">
         Se afiliar
     </a>
     <div class="login" onClick = "toggle_user_container()">
@@ -54,7 +54,7 @@
 <div class="user-container">
     <section class="values">
         <button>
-            <a class="beauty-btn" href="https://t.me/JDaniloC">
+            <a class="beauty-btn" href="">
                 Renovar licença
             </a>
         </button>
